Sun Aug 12 19:05:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be_include/be_global.h:
        * docs/compiler.html:
          Added stripped_filename option to overrule stripped filename of
          input file

Sun Aug 12 18:06:49 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted change below, seems to break VMS and the methods are still
        declared in the header

        Fri Jul 20 17:38:45 UTC 2012  Adam Mitz  <mitza@ociweb.com>
        * tao/CDR.inl:
          Changes to build for VxWorks 6.8 kernel mode
          which does not define ACE_HAS_WCHAR.

Sat Aug 11 08:40:30 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:

          Fuzz error was wrong, need try_aquire here, not ACE_GUARD,
          macro. Reverted change and disabled the fuzz check.

Fri Aug 10 14:42:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Mcast_Transport.cpp:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_client.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_m.conf:
        * orbsvcs/tests/Miop/McastFragmentation/uipmc_server_n.conf:

          Fuzz errors corrected.

Fri Aug 10 14:00:00 UTC 2012  Simon Massey  <sma at prismtech dot com>

        * NEWS:
        * docs/Options.html:
        * tao/Connection_Handler.cpp:
        * orbsvcs/orbsvcs/PortableGroup/MIOP.cpp:
        * orbsvcs/orbsvcs/PortableGroup/miopconf.h:
        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Loader.cpp:
        * orbsvcs/orbsvcs/PortableGroup/README:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.h:
        * orbsvcs/orbsvcs/PortableGroup/UIPMC_Acceptor.cpp: